src/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-numbers-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: haproxy
  rules:
    - host: zakhvatkina.hse.dc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ms-numbers-svc
                port:
                  number: 8080
